@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -10,10 +10,12 @@
 
 package org.junit.jupiter.params.converter;
 
-import static org.apiguardian.api.API.Status.EXPERIMENTAL;
+import static org.apiguardian.api.API.Status.STABLE;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.extension.ParameterContext;
+import org.junit.jupiter.params.support.FieldContext;
 import org.junit.platform.commons.util.Preconditions;
 import org.junit.platform.commons.util.ReflectionUtils;
 
@@ -28,8 +30,8 @@ import org.junit.platform.commons.util.ReflectionUtils;
  * @see ArgumentConverter
  * @see SimpleArgumentConverter
  */
-@API(status = EXPERIMENTAL, since = "5.7")
-public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter {
+@API(status = STABLE, since = "5.10")
+public abstract class TypedArgumentConverter<S, T extends @Nullable Object> implements ArgumentConverter {
 
 	private final Class<S> sourceType;
 	private final Class<T> targetType;
@@ -47,19 +49,31 @@ public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter 
 	}
 
 	@Override
-	public final Object convert(Object source, ParameterContext context) throws ArgumentConversionException {
+	public final @Nullable Object convert(@Nullable Object source, ParameterContext context)
+			throws ArgumentConversionException {
+
+		return convert(source, context.getParameter().getType());
+	}
+
+	@Override
+	public final @Nullable Object convert(@Nullable Object source, FieldContext context)
+			throws ArgumentConversionException {
+
+		return convert(source, context.getField().getType());
+	}
+
+	private T convert(@Nullable Object source, Class<?> actualTargetType) {
 		if (source == null) {
 			return convert(null);
 		}
 		if (!this.sourceType.isInstance(source)) {
-			String message = String.format(
-				"%s cannot convert objects of type [%s]. Only source objects of type [%s] are supported.",
+			String message = "%s cannot convert objects of type [%s]. Only source objects of type [%s] are supported.".formatted(
 				getClass().getSimpleName(), source.getClass().getName(), this.sourceType.getName());
 			throw new ArgumentConversionException(message);
 		}
-		if (!ReflectionUtils.isAssignableTo(this.targetType, context.getParameter().getType())) {
-			String message = String.format("%s cannot convert to type [%s]. Only target type [%s] is supported.",
-				getClass().getSimpleName(), context.getParameter().getType().getName(), this.targetType.getName());
+		if (!ReflectionUtils.isAssignableTo(this.targetType, actualTargetType)) {
+			String message = "%s cannot convert to type [%s]. Only target type [%s] is supported.".formatted(
+				getClass().getSimpleName(), actualTargetType.getName(), this.targetType.getName());
 			throw new ArgumentConversionException(message);
 		}
 		return convert(this.sourceType.cast(source));
@@ -75,6 +89,6 @@ public abstract class TypedArgumentConverter<S, T> implements ArgumentConverter 
 	 * @throws ArgumentConversionException if an error occurs during the
 	 * conversion
 	 */
-	protected abstract T convert(S source) throws ArgumentConversionException;
+	protected abstract T convert(@Nullable S source) throws ArgumentConversionException;
 
 }
