@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -10,30 +10,23 @@
 
 package org.junit.jupiter.params.provider;
 
-import static java.util.Spliterators.spliteratorUnknownSize;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.StreamSupport.stream;
-import static org.junit.jupiter.params.provider.CsvArgumentsProvider.getHeaders;
-import static org.junit.jupiter.params.provider.CsvArgumentsProvider.handleCsvException;
-import static org.junit.jupiter.params.provider.CsvArgumentsProvider.processCsvRecord;
-import static org.junit.jupiter.params.provider.CsvParserFactory.createParserFor;
-import static org.junit.platform.commons.util.CollectionUtils.toSet;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
 import java.util.Spliterator;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
-import com.univocity.parsers.csv.CsvParser;
+import de.siegmar.fastcsv.reader.CsvReader;
+import de.siegmar.fastcsv.reader.CsvRecord;
 
 import org.junit.jupiter.api.extension.ExtensionContext;
+import org.junit.jupiter.params.support.ParameterDeclarations;
 import org.junit.platform.commons.JUnitException;
 import org.junit.platform.commons.PreconditionViolationException;
 import org.junit.platform.commons.util.Preconditions;
@@ -45,10 +38,6 @@ class CsvFileArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvFileS
 
 	private final InputStreamProvider inputStreamProvider;
 
-	private Charset charset;
-	private int numLinesToSkip;
-	private CsvParser csvParser;
-
 	CsvFileArgumentsProvider() {
 		this(DefaultInputStreamProvider.INSTANCE);
 	}
@@ -58,110 +47,92 @@ class CsvFileArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvFileS
 	}
 
 	@Override
-	protected Stream<? extends Arguments> provideArguments(ExtensionContext context, CsvFileSource annotation) {
-		this.charset = getCharsetFrom(annotation);
-		this.numLinesToSkip = annotation.numLinesToSkip();
-		this.csvParser = createParserFor(annotation);
+	protected Stream<? extends Arguments> provideArguments(ParameterDeclarations parameters, ExtensionContext context,
+			CsvFileSource csvFileSource) {
 
-		Stream<Source> resources = Arrays.stream(annotation.resources()).map(inputStreamProvider::classpathResource);
-		Stream<Source> files = Arrays.stream(annotation.files()).map(inputStreamProvider::file);
-		List<Source> sources = Stream.concat(resources, files).collect(toList());
+		Charset charset = getCharsetFrom(csvFileSource);
+
+		CsvReaderFactory.validate(csvFileSource);
+
+		Stream<Source> resources = Arrays.stream(csvFileSource.resources()).map(inputStreamProvider::classpathResource);
+		Stream<Source> files = Arrays.stream(csvFileSource.files()).map(inputStreamProvider::file);
+		List<Source> sources = Stream.concat(resources, files).toList();
 
 		// @formatter:off
 		return Preconditions.notEmpty(sources, "Resources or files must not be empty")
 				.stream()
 				.map(source -> source.open(context))
-				.map(inputStream -> beginParsing(inputStream, annotation))
-				.flatMap(parser -> toStream(parser, annotation));
+				.map(inputStream -> CsvReaderFactory.createReaderFor(csvFileSource, inputStream, charset))
+				.flatMap(reader -> toStream(reader, csvFileSource));
 		// @formatter:on
 	}
 
-	private Charset getCharsetFrom(CsvFileSource annotation) {
+	private static Charset getCharsetFrom(CsvFileSource csvFileSource) {
 		try {
-			return Charset.forName(annotation.encoding());
+			return Charset.forName(csvFileSource.encoding());
 		}
 		catch (Exception ex) {
-			throw new PreconditionViolationException("The charset supplied in " + annotation + " is invalid", ex);
+			throw new PreconditionViolationException("The charset supplied in " + csvFileSource + " is invalid", ex);
 		}
 	}
 
-	private CsvParser beginParsing(InputStream inputStream, CsvFileSource annotation) {
-		try {
-			this.csvParser.beginParsing(inputStream, this.charset);
-		}
-		catch (Throwable throwable) {
-			handleCsvException(throwable, annotation);
-		}
-		return this.csvParser;
-	}
-
-	private Stream<Arguments> toStream(CsvParser csvParser, CsvFileSource annotation) {
-		CsvParserIterator iterator = new CsvParserIterator(csvParser, annotation);
-		return stream(spliteratorUnknownSize(iterator, Spliterator.ORDERED), false) //
-				.skip(this.numLinesToSkip) //
+	private static Stream<Arguments> toStream(CsvReader<? extends CsvRecord> reader, CsvFileSource csvFileSource) {
+		var spliterator = CsvExceptionHandlingSpliterator.delegatingTo(reader.spliterator(), csvFileSource);
+		boolean useHeadersInDisplayName = csvFileSource.useHeadersInDisplayName();
+		// @formatter:off
+		return StreamSupport.stream(spliterator, false)
+				.skip(csvFileSource.numLinesToSkip())
+				.map(record -> CsvArgumentsProvider.processCsvRecord(
+						record, useHeadersInDisplayName)
+				)
 				.onClose(() -> {
 					try {
-						csvParser.stopParsing();
+						reader.close();
 					}
 					catch (Throwable throwable) {
-						handleCsvException(throwable, annotation);
+						throw CsvArgumentsProvider.handleCsvException(throwable, csvFileSource);
 					}
 				});
+		// @formatter:on
 	}
 
-	private static class CsvParserIterator implements Iterator<Arguments> {
+	private record CsvExceptionHandlingSpliterator<T>(Spliterator<T> delegate, CsvFileSource csvFileSource)
+			implements Spliterator<T> {
 
-		private final CsvParser csvParser;
-		private final CsvFileSource annotation;
-		private final boolean useHeadersInDisplayName;
-		private final Set<String> nullValues;
-		private Arguments nextArguments;
-		private String[] headers;
-
-		CsvParserIterator(CsvParser csvParser, CsvFileSource annotation) {
-			this.csvParser = csvParser;
-			this.annotation = annotation;
-			this.useHeadersInDisplayName = annotation.useHeadersInDisplayName();
-			this.nullValues = toSet(annotation.nullValues());
-			advance();
+		static <T> CsvExceptionHandlingSpliterator<T> delegatingTo(Spliterator<T> delegate,
+				CsvFileSource csvFileSource) {
+			return new CsvExceptionHandlingSpliterator<>(delegate, csvFileSource);
 		}
 
 		@Override
-		public boolean hasNext() {
-			return this.nextArguments != null;
-		}
-
-		@Override
-		public Arguments next() {
-			Arguments result = this.nextArguments;
-			advance();
-			return result;
-		}
-
-		private void advance() {
+		public boolean tryAdvance(final Consumer<? super T> action) {
 			try {
-				String[] csvRecord = this.csvParser.parseNext();
-				if (csvRecord != null) {
-					// Lazily retrieve headers if necessary.
-					if (this.useHeadersInDisplayName && this.headers == null) {
-						this.headers = getHeaders(this.csvParser);
-					}
-					this.nextArguments = processCsvRecord(csvRecord, this.nullValues, this.useHeadersInDisplayName,
-						this.headers);
-				}
-				else {
-					this.nextArguments = null;
-				}
+				return delegate.tryAdvance(action);
 			}
 			catch (Throwable throwable) {
-				handleCsvException(throwable, this.annotation);
+				throw CsvArgumentsProvider.handleCsvException(throwable, csvFileSource);
 			}
+		}
+
+		@Override
+		public Spliterator<T> trySplit() {
+			return delegate.trySplit();
+		}
+
+		@Override
+		public long estimateSize() {
+			return delegate.estimateSize();
+		}
+
+		@Override
+		public int characteristics() {
+			return delegate.characteristics();
 		}
 
 	}
 
 	@FunctionalInterface
-	private interface Source {
+	interface Source {
 
 		InputStream open(ExtensionContext context);
 
@@ -178,7 +149,7 @@ class CsvFileArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvFileS
 		}
 
 		default Source file(String path) {
-			return context -> openFile(path);
+			return __ -> openFile(path);
 		}
 
 	}
@@ -190,6 +161,7 @@ class CsvFileArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvFileS
 		@Override
 		public InputStream openClasspathResource(Class<?> baseClass, String path) {
 			Preconditions.notBlank(path, () -> "Classpath resource [" + path + "] must not be null or blank");
+			//noinspection resource (closed elsewhere)
 			InputStream inputStream = baseClass.getResourceAsStream(path);
 			return Preconditions.notNull(inputStream, () -> "Classpath resource [" + path + "] does not exist");
 		}
@@ -198,7 +170,7 @@ class CsvFileArgumentsProvider extends AnnotationBasedArgumentsProvider<CsvFileS
 		public InputStream openFile(String path) {
 			Preconditions.notBlank(path, () -> "File [" + path + "] must not be null or blank");
 			try {
-				return Files.newInputStream(Paths.get(path));
+				return Files.newInputStream(Path.of(path));
 			}
 			catch (IOException e) {
 				throw new JUnitException("File [" + path + "] could not be read", e);
