@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -122,7 +122,7 @@ class ColorPalette {
 	}
 
 	private String getAnsiFormatter(Style style) {
-		return String.format("\u001B[%sm", this.colorsToAnsiSequences.get(style));
+		return "\u001B[%sm".formatted(this.colorsToAnsiSequences.get(style));
 	}
 
 }
