@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -59,8 +59,7 @@ class MethodSelectorResolver implements SelectorResolver {
 
 	private Optional<RunnerTestDescriptor> addFilter(TestDescriptor parent,
 			Function<RunnerTestDescriptor, Filter> filterCreator) {
-		if (parent instanceof RunnerTestDescriptor) {
-			RunnerTestDescriptor runnerTestDescriptor = (RunnerTestDescriptor) parent;
+		if (parent instanceof RunnerTestDescriptor runnerTestDescriptor) {
 			runnerTestDescriptor.getFilters().ifPresent(
 				filters -> filters.add(filterCreator.apply(runnerTestDescriptor)));
 			return Optional.of(runnerTestDescriptor);
@@ -108,12 +107,12 @@ class MethodSelectorResolver implements SelectorResolver {
 
 			private boolean isParameterizedMethod(Description description) {
 				String methodName = DescriptionUtils.getMethodName(description);
-				return methodName.startsWith(desiredMethodName + "[");
+				return methodName != null && methodName.startsWith(desiredMethodName + "[");
 			}
 
 			@Override
 			public String describe() {
-				return String.format("Method %s", desiredDescription.getDisplayName());
+				return "Method %s".formatted(desiredDescription.getDisplayName());
 			}
 		};
 	}
