@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -22,11 +22,12 @@ import static org.junit.platform.engine.discovery.DiscoverySelectors.selectFile;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectIteration;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectMethod;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectPackage;
+import static org.junit.platform.engine.discovery.DiscoverySelectors.selectUniqueId;
 import static org.junit.platform.engine.discovery.DiscoverySelectors.selectUri;
 
 import java.io.File;
 import java.net.URI;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -34,8 +35,9 @@ import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
 import org.junit.platform.commons.PreconditionViolationException;
-import org.junit.platform.console.options.CommandLineOptions;
+import org.junit.platform.console.options.TestDiscoveryOptions;
 import org.junit.platform.engine.Filter;
+import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.discovery.ClassNameFilter;
 import org.junit.platform.engine.discovery.ClassSelector;
 import org.junit.platform.engine.discovery.ClasspathResourceSelector;
@@ -46,6 +48,7 @@ import org.junit.platform.engine.discovery.IterationSelector;
 import org.junit.platform.engine.discovery.MethodSelector;
 import org.junit.platform.engine.discovery.PackageNameFilter;
 import org.junit.platform.engine.discovery.PackageSelector;
+import org.junit.platform.engine.discovery.UniqueIdSelector;
 import org.junit.platform.engine.discovery.UriSelector;
 import org.junit.platform.launcher.LauncherDiscoveryRequest;
 
@@ -54,7 +57,7 @@ import org.junit.platform.launcher.LauncherDiscoveryRequest;
  */
 class DiscoveryRequestCreatorTests {
 
-	private final CommandLineOptions options = new CommandLineOptions();
+	private final TestDiscoveryOptions options = new TestDiscoveryOptions();
 
 	@Test
 	void convertsScanClasspathOptionWithoutExplicitRootDirectories() {
@@ -73,7 +76,7 @@ class DiscoveryRequestCreatorTests {
 	@Test
 	void convertsScanClasspathOptionWithExplicitRootDirectories() {
 		options.setScanClasspath(true);
-		options.setSelectedClasspathEntries(List.of(Paths.get("."), Paths.get("..")));
+		options.setSelectedClasspathEntries(List.of(Path.of("."), Path.of("..")));
 
 		var request = convert();
 
@@ -87,7 +90,7 @@ class DiscoveryRequestCreatorTests {
 	@Test
 	void convertsScanClasspathOptionWithAdditionalClasspathEntries() {
 		options.setScanClasspath(true);
-		options.setAdditionalClasspathEntries(List.of(Paths.get("."), Paths.get("..")));
+		options.setAdditionalClasspathEntries(List.of(Path.of("."), Path.of("..")));
 
 		var request = convert();
 
@@ -116,7 +119,7 @@ class DiscoveryRequestCreatorTests {
 
 		var filters = request.getFiltersByType(ClassNameFilter.class);
 		assertThat(filters).hasSize(1);
-		assertExcludes(filters.get(0), STANDARD_INCLUDE_PATTERN);
+		assertExcludes(filters.getFirst(), STANDARD_INCLUDE_PATTERN);
 	}
 
 	@Test
@@ -128,8 +131,8 @@ class DiscoveryRequestCreatorTests {
 
 		var filters = request.getFiltersByType(ClassNameFilter.class);
 		assertThat(filters).hasSize(1);
-		assertIncludes(filters.get(0), "Foo.*Bar");
-		assertIncludes(filters.get(0), "Bar.*Foo");
+		assertIncludes(filters.getFirst(), "Foo.*Bar");
+		assertIncludes(filters.getFirst(), "Bar.*Foo");
 	}
 
 	@Test
@@ -143,10 +146,10 @@ class DiscoveryRequestCreatorTests {
 
 		var filters = request.getFiltersByType(ClassNameFilter.class);
 		assertThat(filters).hasSize(1);
-		assertIncludes(filters.get(0), "SomeTest");
-		assertIncludes(filters.get(0), "com.acme.Foo");
-		assertIncludes(filters.get(0), "com.acme.Bar");
-		assertIncludes(filters.get(0), "Foo.*Bar");
+		assertIncludes(filters.getFirst(), "SomeTest");
+		assertIncludes(filters.getFirst(), "com.acme.Foo");
+		assertIncludes(filters.getFirst(), "com.acme.Bar");
+		assertIncludes(filters.getFirst(), "Foo.*Bar");
 	}
 
 	@Test
@@ -172,10 +175,22 @@ class DiscoveryRequestCreatorTests {
 		var packageNameFilters = request.getFiltersByType(PackageNameFilter.class);
 
 		assertThat(packageNameFilters).hasSize(2);
-		assertIncludes(packageNameFilters.get(0), "org.junit.included1");
+		assertIncludes(packageNameFilters.getFirst(), "org.junit.included1");
 		assertIncludes(packageNameFilters.get(0), "org.junit.included2");
 		assertIncludes(packageNameFilters.get(0), "org.junit.included3");
 		assertExcludes(packageNameFilters.get(1), "org.junit.excluded1");
+	}
+
+	@Test
+	void convertsMethodNamePatternOptions() {
+		options.setScanClasspath(true);
+		options.setIncludedMethodNamePatterns(List.of(".+#foo.*Bar", ".+#toString", ".+#method.*"));
+		options.setExcludedMethodNamePatterns(List.of(".+#bar.*Foo"));
+		var request = convert();
+		var methodNameFilters = request.getPostDiscoveryFilters();
+		assertThat(methodNameFilters).hasSize(2);
+		assertThat(methodNameFilters.get(0).toString()).contains(".+#foo.*Bar", ".+#toString", ".+#method.*");
+		assertThat(methodNameFilters.get(1).toString()).contains(".+#bar.*Foo");
 	}
 
 	@Test
@@ -204,6 +219,21 @@ class DiscoveryRequestCreatorTests {
 		assertThat(engineFilters).hasSize(2);
 		assertThat(engineFilters.get(0).toString()).contains("includes", "[engine1, engine2, engine3]");
 		assertThat(engineFilters.get(1).toString()).contains("excludes", "[engine2]");
+	}
+
+	@Test
+	void propagatesUniqueIdSelectors() {
+		options.setSelectedUniqueId(List.of(selectUniqueId("[engine:a]/[1:1]"), selectUniqueId("[engine:b]/[2:2]")));
+
+		var request = convert();
+		var uriSelectors = request.getSelectorsByType(UniqueIdSelector.class);
+
+		assertThat(uriSelectors) //
+				.extracting(UniqueIdSelector::getUniqueId) //
+				.containsExactly( //
+					UniqueId.parse("[engine:a]/[1:1]"), //, //
+					UniqueId.parse("[engine:b]/[2:2]") //
+				);
 	}
 
 	@Test
@@ -267,12 +297,12 @@ class DiscoveryRequestCreatorTests {
 		var methodSelectors = request.getSelectorsByType(MethodSelector.class);
 
 		assertThat(methodSelectors).hasSize(2);
-		assertThat(methodSelectors.get(0).getClassName()).isEqualTo("com.acme.Foo");
+		assertThat(methodSelectors.getFirst().getClassName()).isEqualTo("com.acme.Foo");
 		assertThat(methodSelectors.get(0).getMethodName()).isEqualTo("m");
-		assertThat(methodSelectors.get(0).getMethodParameterTypes()).isEqualTo("");
+		assertThat(methodSelectors.get(0).getParameterTypeNames()).isEmpty();
 		assertThat(methodSelectors.get(1).getClassName()).isEqualTo("com.example.Bar");
 		assertThat(methodSelectors.get(1).getMethodName()).isEqualTo("method");
-		assertThat(methodSelectors.get(1).getMethodParameterTypes()).isEqualTo("java.lang.Object");
+		assertThat(methodSelectors.get(1).getParameterTypeNames()).isEqualTo("java.lang.Object");
 	}
 
 	@Test
@@ -304,7 +334,19 @@ class DiscoveryRequestCreatorTests {
 	}
 
 	@Test
-	@SuppressWarnings("deprecation")
+	void propagatesSelectorIdentifiers() {
+		var methodSelector = selectMethod("com.acme.Foo#m()");
+		var classSelector = selectClass("com.example.Bar");
+		options.setSelectorIdentifiers(
+			List.of(methodSelector.toIdentifier().orElseThrow(), classSelector.toIdentifier().orElseThrow()));
+
+		var request = convert();
+
+		assertThat(request.getSelectorsByType(MethodSelector.class)).containsExactly(methodSelector);
+		assertThat(request.getSelectorsByType(ClassSelector.class)).containsExactly(classSelector);
+	}
+
+	@Test
 	void convertsConfigurationParameters() {
 		options.setScanClasspath(true);
 		options.setConfigurationParameters(mapOf(entry("foo", "bar"), entry("baz", "true")));
@@ -312,14 +354,26 @@ class DiscoveryRequestCreatorTests {
 		var request = convert();
 		var configurationParameters = request.getConfigurationParameters();
 
-		assertThat(configurationParameters.size()).isEqualTo(2);
 		assertThat(configurationParameters.get("foo")).contains("bar");
 		assertThat(configurationParameters.getBoolean("baz")).contains(true);
 	}
 
+	@Test
+	void convertsConfigurationParametersResources() {
+		options.setScanClasspath(true);
+		options.setConfigurationParameters(mapOf(entry("foo", "bar"), entry("com.example.prop.first", "baz")));
+		options.setConfigurationParametersResources(List.of("config-test.properties"));
+
+		var request = convert();
+		var configurationParameters = request.getConfigurationParameters();
+
+		assertThat(configurationParameters.get("foo")).contains("bar");
+		assertThat(configurationParameters.get("com.example.prop.first")).contains("baz");
+		assertThat(configurationParameters.get("com.example.prop.second")).contains("second value");
+	}
+
 	private LauncherDiscoveryRequest convert() {
-		var creator = new DiscoveryRequestCreator();
-		return creator.toDiscoveryRequest(options);
+		return DiscoveryRequestCreator.toDiscoveryRequestBuilder(options).build();
 	}
 
 	private void assertIncludes(Filter<String> filter, String included) {
