@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 the original author or authors.
+ * Copyright 2015-2025 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -11,15 +11,13 @@
 package org.junit.platform.engine.support.descriptor;
 
 import static java.util.stream.Collectors.toCollection;
-import static org.junit.platform.commons.util.AnnotationUtils.findRepeatableAnnotations;
+import static org.junit.platform.commons.support.AnnotationSupport.findRepeatableAnnotations;
 
 import java.lang.reflect.Method;
 import java.util.LinkedHashSet;
 import java.util.Set;
 
 import org.junit.jupiter.api.Tag;
-import org.junit.platform.commons.logging.Logger;
-import org.junit.platform.commons.logging.LoggerFactory;
 import org.junit.platform.commons.util.ClassUtils;
 import org.junit.platform.commons.util.Preconditions;
 import org.junit.platform.engine.TestTag;
@@ -30,55 +28,27 @@ import org.junit.platform.engine.UniqueId;
  */
 public class DemoMethodTestDescriptor extends AbstractTestDescriptor {
 
-	private static final Logger logger = LoggerFactory.getLogger(DemoMethodTestDescriptor.class);
-
-	private final Class<?> testClass;
 	private final Method testMethod;
 
-	public DemoMethodTestDescriptor(UniqueId uniqueId, Class<?> testClass, Method testMethod) {
+	public DemoMethodTestDescriptor(UniqueId uniqueId, Method testMethod) {
 		super(uniqueId,
-			String.format("%s(%s)", Preconditions.notNull(testMethod, "Method must not be null").getName(),
+			"%s(%s)".formatted(Preconditions.notNull(testMethod, "Method must not be null").getName(),
 				ClassUtils.nullSafeToString(Class::getSimpleName, testMethod.getParameterTypes())),
 			MethodSource.from(testMethod));
 
-		this.testClass = Preconditions.notNull(testClass, "Class must not be null");
 		this.testMethod = testMethod;
 	}
 
 	@Override
 	public Set<TestTag> getTags() {
-		// Copied from org.junit.jupiter.engine.descriptor.JupiterTestDescriptor.getTags(AnnotatedElement)
-		// @formatter:off
-		Set<TestTag> methodTags = findRepeatableAnnotations(this.testMethod, Tag.class).stream()
-				.map(Tag::value)
-				.filter(tag -> {
-					var isValid = TestTag.isValid(tag);
-					if (!isValid) {
-						// TODO [#242] Replace logging with precondition check once we have a proper mechanism for
-						// handling validation exceptions during the TestEngine discovery phase.
-						//
-						// As an alternative to a precondition check here, we could catch any
-						// PreconditionViolationException thrown by TestTag::create.
-						logger.warn(() -> String.format(
-							"Configuration error: invalid tag syntax in @Tag(\"%s\") declaration on [%s]. Tag will be ignored.",
-							tag, this.testMethod));
-					}
-					return isValid;
-				})
-				.map(TestTag::create)
+		Set<TestTag> methodTags = findRepeatableAnnotations(this.testMethod, Tag.class).stream() //
+				.map(Tag::value) //
+				.filter(TestTag::isValid) //
+				.map(TestTag::create) //
 				.collect(toCollection(LinkedHashSet::new));
-		// @formatter:on
 
 		getParent().ifPresent(parentDescriptor -> methodTags.addAll(parentDescriptor.getTags()));
 		return methodTags;
-	}
-
-	public final Class<?> getTestClass() {
-		return this.testClass;
-	}
-
-	public final Method getTestMethod() {
-		return this.testMethod;
 	}
 
 	@Override
